RESOLVED FIXED 80403
[Forms] Hidden input element should not have labels.
https://bugs.webkit.org/show_bug.cgi?id=80403
Summary [Forms] Hidden input element should not have labels.
yosin
Reported 2012-03-06 02:37:54 PST
According to the specification[1], "hidden" input type element isn't labelable. * FF=PASS * IE=PASS * OP=FAIL Sample URI(http://jsfiddle.net/56yRM/) should output only "Hidden". [1] http://www.whatwg.org/specs/web-apps/current-work/multipage/forms.html#category-label
Attachments
Patch 1 (5.78 KB, patch)
2012-03-07 21:28 PST, yosin
no flags
Patch 2 (13.05 KB, patch)
2012-03-13 01:01 PDT, yosin
no flags
Patch 3 (14.72 KB, patch)
2012-03-13 22:04 PDT, yosin
no flags
yosin
Comment 1 2012-03-07 21:28:38 PST
yosin
Comment 2 2012-03-13 01:01:58 PDT
Kent Tamura
Comment 3 2012-03-13 21:24:28 PDT
Comment on attachment 131570 [details] Patch 2 View in context: https://bugs.webkit.org/attachment.cgi?id=131570&action=review > Source/WebCore/ChangeLog:12 > + Note: The HTML5 specification isn't clear for non-labelable element's "labels" > + attribute return value. FF and OP return empty node list. IE returns null. nit: 'FF' 'OP' are not so common abbreviations. > LayoutTests/fast/forms/label/labelable-elements-expected.txt:84 > -FAIL element.labels should be undefined. Was [object NodeList] > -PASS element.labels is not null > +PASS element.labels is null We need similar changes for LayoutTests/platform/*/fast/forms/label/labelable-elements-expected.txt.
yosin
Comment 4 2012-03-13 22:04:04 PDT
Kent Tamura
Comment 5 2012-03-13 22:06:11 PDT
Comment on attachment 131785 [details] Patch 3 ok
WebKit Review Bot
Comment 6 2012-03-13 23:54:20 PDT
Comment on attachment 131785 [details] Patch 3 Clearing flags on attachment: 131785 Committed r110665: <http://trac.webkit.org/changeset/110665>
WebKit Review Bot
Comment 7 2012-03-13 23:54:25 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.