Source/WebCore: [Forms] Hidden input element should not have labels. https://bugs.webkit.org/show_bug.cgi?id=80403

Patch by Yosifumi Inoue <yosin@chromium.org> on 2012-03-13
Reviewed by Kent Tamura.

This patch changes "labels" attribute behavior for hidden input type.
It returns null instead of NodeList of labels or empty node list.

Note: The HTML5 specification isn't clear for non-labelable element's "labels"
attribute return value. Firefox and Opera return empty node list. IE returns null.

No new tests. Existing tests are updated.

* html/HTMLInputElement.cpp:
(WebCore::HTMLInputElement::isLabelable): Added. Dispatch to InputType.
* html/HiddenInputType.h:  Added isLabelable returning false.
* html/InputType.cpp:
(WebCore::InputType::isLabelable): Added. Returning true for all input types except for "hidden" type.
(WebCore):
* html/InputType.h:
(InputType): Added isLabelable declaration.

LayoutTests: [Forms] Hidden input element should not have labels.
https://bugs.webkit.org/show_bug.cgi?id=80403

Patch by Yosifumi Inoue <yosin@chromium.org> on 2012-03-13
Reviewed by Kent Tamura.

This patch changes expected text for null value of labels attribute
of hidden input type and labelable-elements to check null value for
the labels attribute of input type.

* fast/forms/label/labelable-elements-expected.txt:
* fast/forms/label/labelable-elements.html:
* fast/forms/label/labels-add-htmlFor-label-expected.txt:
* fast/forms/label/labels-add-parent-label-expected.txt:
* fast/forms/label/labels-change-htmlFor-attribute-expected.txt:
* fast/forms/label/labels-multiple-sibling-labels-expected.txt:
* fast/forms/label/labels-parent-and-sibling-labels-expected.txt:
* fast/forms/label/labels-remove-htmlFor-attribute-expected.txt:
* fast/forms/label/labels-remove-htmlFor-label-expected.txt:
* fast/forms/label/labels-remove-parent-label-expected.txt:
* fast/forms/label/labels-set-htmlFor-attribute-expected.txt:
* platform/chromium/fast/forms/label/labelable-elements-expected.txt:
* platform/mac/fast/forms/label/labelable-elements-expected.txt:

Canonical link: https://commits.webkit.org/98240@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@110665 268f45cc-cd09-0410-ab3c-d52691b4dbfc